--- a/typescript/pro_ts/package.json
+++ b/typescript/pro_ts/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@types/node": "^14.14.10",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "express": "^4.21.1"
   }
 }
