feat:docker_for_dev ~25章

--- a/container/docker_for_dev/work/docker/app/Dockerfile
+++ b/container/docker_for_dev/work/docker/app/Dockerfile
@@ -5,6 +5,6 @@ RUN docker-php-ext-install pdo_mysql
 RUN apt-get update
 RUN apt-get install -y msmtp-mta
 
-COPY ./msmtpc ext/mesmtp
+COPY ./msmtprc ext/mesmtrp
 
 CMD ["/user/local/bin/php", "--server", "0.0.0.0:8000", "--docroot", "/my-work"]
