feat:linux-structure P7まで

--- a/linux/linux-structure/Dockerfile
+++ b/linux/linux-structure/Dockerfile
@@ -4,4 +4,4 @@ FROM ubuntu:20.04
 
 RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 RUN apt-get update
-RUN apt-get install -y binutils build-essential golang sysstat python3-matplotlib python3-pil fonts-takao fio qemu-kvm virt-manager libvirt-clients virtinst jq libvirt-daemon-system
+RUN apt-get install -y binutils build-essential golang sysstat python3-matplotlib python3-pil fonts-takao fio qemu-kvm virt-manager libvirt-clients virtinst jq libvirt-daemon-system strace
