--- a/typescript/survival-ts/package.json
+++ b/typescript/survival-ts/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "typescript": "^5.7.2"
+  "devDependencies": {
+    "typescript": "^5.6.3"
   }
 }
